# agentlog

./: .env.example  .gitignore  DECISIONS.md  LICENSE  README.md  agentlog.py  pyproject.toml
.github/workflows/: publish.yml
example-log/: decisions.jsonl  patterns.md
