[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlog"
version = "0.1.0"
description = "Persistent decision memory for any project. Karpathy's LLM Wiki, productized."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.25.0",
    "google-generativeai>=0.5.0"
]

[project.scripts]
agentlog = "agentlog:main"
