[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlog-cli"
version = "0.1.0"
description = "Persistent decision memory for any project. Karpathy's LLM Wiki, productized."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Ryan Alexander Alberts", email = "ryan.a.alberts@gmail.com" }
]
keywords = [
    "llm",
    "cli",
    "decision-log",
    "memory",
    "claude",
    "anthropic",
    "gemini",
    "knowledge-management",
    "agentic-ai",
    "ai-memory",
    "developer-tools"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "anthropic>=0.25.0",
    "google-generativeai>=0.5.0"
]

[project.urls]
Homepage      = "https://github.com/RyanAlberts/agentlog"
Repository    = "https://github.com/RyanAlberts/agentlog"
Issues        = "https://github.com/RyanAlberts/agentlog/issues"
"Design notes" = "https://github.com/RyanAlberts/agentlog/blob/main/DECISIONS.md"

[project.scripts]
agentlog = "agentlog:main"

[tool.setuptools]
py-modules = ["agentlog"]
